--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "server=localhost;userid=root;password=26rafinha;database=saleswebmvcappdb"
+    "SalesWebMvcContext": "server=localhost;userid=root;password=******;database=saleswebmvcappdb"
   }
 }
